<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <TextView
        android:id="@+id/name"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputName"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/birth"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/birthTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:hint="@string/birth_example"
        app:layout_constraintBottom_toBottomOf="@+id/birth"
        app:layout_constraintEnd_toStartOf="@+id/selectBirthButton"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/birth" />

    <ImageButton
        android:id="@+id/selectBirthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/round_edit_calendar_white"
        app:layout_constraintBottom_toBottomOf="@+id/birth"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        app:layout_constraintTop_toTopOf="@+id/birth" />

    <TextView
        android:id="@+id/bloodType"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bloodType"
        app:layout_constraintStart_toStartOf="@+id/birth"
        app:layout_constraintTop_toBottomOf="@+id/birth" />

    <RadioGroup
        android:id="@+id/bloodTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/bloodType"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/bloodType">

        <RadioButton
            android:id="@+id/bloodTypePlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rhPlus"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/bloodTypeMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rhMinus"
            android:textSize="12sp" />

    </RadioGroup>

    <Spinner
        android:id="@+id/bloodTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/bloodType"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        app:layout_constraintStart_toEndOf="@+id/bloodTypeRadioGroup"
        app:layout_constraintTop_toTopOf="@id/bloodType" />

    <TextView
        android:id="@+id/emergencyContact"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergencyContact"
        app:layout_constraintStart_toStartOf="@+id/bloodType"
        app:layout_constraintTop_toBottomOf="@+id/bloodType" />

    <EditText
        android:id="@+id/emergencyContactEditText"
        style="@style/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputContact"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/emergencyContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/caution"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caution"
        app:layout_constraintStart_toStartOf="@+id/emergencyContact"
        app:layout_constraintTop_toBottomOf="@+id/emergencyContact" />

    <CheckBox
        android:id="@+id/cautionCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:text="@string/isInputCaution"
        app:layout_constraintBottom_toBottomOf="@+id/caution"
        app:layout_constraintEnd_toEndOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toTopOf="@+id/caution" />

    <EditText
        android:id="@+id/cautionEditText"
        style="@style/cautionValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputCaution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/cautionCheckBox" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/birthLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="birthTextView,selectBirthButton"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/round_save_white" />

</androidx.constraintlayout.widget.ConstraintLayout>