<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        style="@style/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username_example"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/birth"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/userBirth"
        style="@style/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/userBirth_example"
        app:layout_constraintBaseline_toBaselineOf="@+id/birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/bloodType"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bloodType"
        app:layout_constraintStart_toStartOf="@+id/birth"
        app:layout_constraintTop_toBottomOf="@+id/birth" />

    <TextView
        android:id="@+id/userBloodType"
        style="@style/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/userBloodType_example"
        app:layout_constraintBaseline_toBaselineOf="@+id/bloodType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/emergencyContact"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergencyContact"
        app:layout_constraintStart_toStartOf="@+id/bloodType"
        app:layout_constraintTop_toBottomOf="@+id/bloodType" />

    <TextView
        android:id="@+id/userEmergencyContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/userEmergencyContact_example"
        android:textColor="@color/darkGray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/emergencyContact"
        app:layout_constraintEnd_toStartOf="@+id/callButton"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/emergencyContact" />

    <ImageButton
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/round_call_white"
        app:layout_constraintBottom_toBottomOf="@+id/emergencyContact"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintTop_toTopOf="@+id/emergencyContact" />

    <TextView
        android:id="@+id/caution"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caution"
        app:layout_constraintStart_toStartOf="@+id/emergencyContact"
        app:layout_constraintTop_toBottomOf="@+id/emergencyContact" />

    <TextView
        android:id="@+id/userCaution"
        style="@style/cautionValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/userCaution_example"
        app:layout_constraintBaseline_toBaselineOf="@+id/caution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/goInputActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/round_edit_white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/goInputActivityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/round_delete_white" />

</androidx.constraintlayout.widget.ConstraintLayout>